# topic-keywors

./: README.md  pyproject.toml  run.sh  tox.ini
app/: config.py  main.py  preprocessing.py  tools.py  topic_modeler.py  training_pipeline.py
app/preprocessing_tools/: __init__.py  preprocessing_tools.py
app/stopwords/raw_stopwords/: stopwords.txt
